First usage of ClrMd
- First usage of ClrMd
- Very simplified MVVM sample (OnPropertyChanged)

--- a/src/MemoryVisualizer.UI/MainWindow.xaml
+++ b/src/MemoryVisualizer.UI/MainWindow.xaml
@@ -33,7 +33,7 @@
                   VerticalAlignment="Top" 
                   Grid.Row="2" ResizeBehavior="PreviousAndNext"
                   Height="5" Background="#FFBCBCBC"/>
-            <Label Content="Graph" Grid.Row="3" />
+            <TextBox Text="{Binding Graph}" Grid.Row="3" FontFamily="Consolas" VerticalScrollBarVisibility="Auto" />
         </Grid>
     </Grid>
 </Window>
